--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
   </head>
   <body>
     <!-- header start -->
-    <header></header>
+    <header>
+      <nav class="nav-bar">
+        <div class="logo">
+          <img src="images/icons//logo.png" alt="logo" />
+          <a href="#">Idea</a>
+        </div>
+        <div class="top-menu">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Works</a>
+          <img src="images/icons/profile.png" alt="profile" />
+        </div>
+      </nav>
+    </header>
     <!-- header end -->
     <main>
       <!-- top players and top blogs -->
